# SerEngine

./: .gitignore  CMakeLists.txt  README.md
VoidEngine/: .gitignore  CMakeLists.txt
VoidEngine/src/Sandbox/: SandboxApp.cpp
VoidEngine/src/Void/Audio/: AudioEngine.cpp  AudioEngine.h
VoidEngine/src/Void/Core/: Application.cpp  Application.h  EntryPoint.h  GameState.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.h
VoidEngine/src/Void/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
VoidEngine/src/Void/Math/: Vector2.h
VoidEngine/src/Void/Physics/: Physics2D.h  PhysicsEngine.cpp  PhysicsEngine.h
VoidEngine/src/Void/Platform/SDL/: SDLWindow.cpp  SDLWindow.h
VoidEngine/src/Void/Renderer/: Buffer.cpp  Buffer.h  Camera.h  CameraEffects.h  Framebuffer.cpp  Framebuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  ParticleSystem.cpp  ParticleSystem.h  PostProcessor.cpp  PostProcessor.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteAnimator.cpp  SpriteAnimator.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VisibilityMap.cpp  VisibilityMap.h
VoidEngine/src/Void/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  ScriptableEntity.h
src/Sandbox/: SandboxApp.cpp
src/SerGame/Core/: Application.cpp  Application.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.h
src/SerGame/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/SerGame/Math/: Vector2.h
src/SerGame/Platform/SDL/: SDLWindow.cpp  SDLWindow.h
src/SerGame/Renderer/: Buffer.cpp  Buffer.h  OrthographicCamera.cpp  OrthographicCamera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
